# edge-platform

./: .gitignore  AGENTS.md  FOUNDATION_BLUEPRINT.md  PROJECT_BOOTSTRAP.md  PROJECT_STATUS.md  README.md  pyproject.toml  test_kernel.py
config/: engine.yaml  market.yaml
docs/: 00_MANIFESTO.md  01_ARCHITECTURE.md  02_RESEARCH_MODEL.md  03_ROADMAP.md  04_DOMAIN_MODEL.md  05_CODING_STANDARD.md  06_TESTING.md  07_GIT_WORKFLOW.md  08_DECISIONS.md  09_GLOSSARY.md  10_PLATFORM_PRINCIPLES.md  DEVELOPMENT_SETUP.md  DEVELOPMENT_WORKFLOW.md  EF-001_EDGE_MODEL.md  EF-002_EDGE_VALIDATION.md  EF-003_EDGE_LIFECYCLE.md  EF-004_EDGE_MANAGEMENT.md  KF-001_KNOWLEDGE_MODEL.md  KF-002_KNOWLEDGE_VALIDATION.md  KF-003_KNOWLEDGE_COLLECTION.md  PE-001_APPROVAL_NOTE.md  PE-001_DELIVERABLES_CHECKLIST.md  PE-001_EXECUTION_BRIEF.md  PE-001_IMPLEMENTATION_PLAN.md  PE-001_PLUGIN_SYSTEM.md  PE-001_REVIEW_SUMMARY.md  PE-002_ADVANCED_DATASET_PROVIDERS.md  PE-003_PORTFOLIO_RESEARCH.md  PE-004_OPTIMIZATION_ENGINE.md  PE-005_MACHINE_LEARNING_INTEGRATION.md  PE-006_APPROVAL_NOTE.md  PE-006_SLICE_2_IMPLEMENTATION_PLAN.md  PE-006_SLICE_3_REPORT_ADAPTERS.md  PE-006_SLICE_4_DASHBOARD_COMPOSITION.md  PE-006_VISUALIZATION_DASHBOARDS.md  PE-007_APPROVAL_NOTE.md  PE-007_DISTRIBUTED_RESEARCH_EXECUTION.md  PE-007_IMPLEMENTATION_PLAN.md  PLATFORM_EVOLUTION_EXECUTION_PATH.md  PLATFORM_EVOLUTION_REVIEW.md  (+9 more)
tests/: __init__.py  conftest.py  helpers.py  test_config.py  test_context.py  test_dataset_provider_lifecycle.py  test_event_bus.py  test_kernel.py  test_lifecycle.py  test_market_import.py  test_plugin_lifecycle.py  (+1 more)
(+152 files in other folders)
